@startuml
skinparam classAttributeIconSize 0

' ----- MODELE -----
class User {
    +name: string
    +surname: string
    +email: string
    +password: string
    +companyName: string
    +type: string
    +organizerStatus: string
    +balance: float
    --
    +casts(): array
}

class Ticket {
    +status: string
    +code: string
    --
    +sector(): Sector
    +user(): User
}

class Sector {
    +name: string
    +seats: int
    +price: float
    --
    +event(): Event
    +tickets(): Ticket[]
    +availableSeats(): int
}

class Organizer {
    +companyName: string
    +email: string
    +password: string
    +status: string
    --
    +events(): Event[]
}

class Event {
    +name: string
    +location: string
    +description: string
    +event_date: datetime
    +image_path: string
    --
    +sectors(): Sector[]
    +organizer(): Organizer
}

' ----- RELACJE MODELE -----
User "1" -- "0..*" Ticket
Sector "1" -- "0..*" Ticket
Sector "1" -- "1" Event
Organizer "1" -- "0..*" Event
Event "1" -- "0..*" Sector

' ----- KONTROLERY -----

class TicketController {
    +index(event: Event): View
    +store(request: Request): RedirectResponse
    +cancel(request: Request): RedirectResponse
    +return(request: Request): RedirectResponse
    +pay(request: Request): RedirectResponse
}

class SectorController {
    +store(request: Request): void
}

class OrganizerController {
    +indexConfirmed(): View
    +indexNotConfirmed(): View
    +createEvent(): View
    +storeEvent(request: Request): RedirectResponse
    +cancel(event: Event): RedirectResponse
}

class HomeController {
    +index(): View
    +addMoney(request: Request): RedirectResponse
}

class EventController {
    +index(): View
    +store(request: Request): RedirectResponse
    +show(event: Event): View
    +edit(event: Event): View
    +update(request: Request, event: Event): RedirectResponse
    +cancel(event: Event): RedirectResponse
}

class AdminController {
    +index(): View
    +confirmOrganizer(id: int): RedirectResponse
    +rejectOrganizer(id: int): RedirectResponse
    +approveEvent(id: int): RedirectResponse
    +rejectEvent(id: int): RedirectResponse
}

class LoginController {
    +login(request: Request): RedirectResponse
    +logout(request: Request): RedirectResponse
    +redirectTo(): string
}

class RegisterController {
    +register(request: RegisterRequest): RedirectResponse
}

' ----- RELACJE KONTROLER-MODEL -----
TicketController --> Ticket
TicketController --> Sector
TicketController --> User
SectorController --> Sector
OrganizerController --> Event
OrganizerController --> Sector
OrganizerController --> User
HomeController --> Ticket
HomeController --> User
EventController --> Event
EventController --> Sector
AdminController --> Event
AdminController --> Organizer
AdminController --> User
LoginController --> User
LoginController --> Organizer
RegisterController --> User
RegisterController --> Organizer

note top of LoginController
 login.blade.php
end note

note top of RegisterController
 register.blade.php
end note

note top of AdminController
 adminPanel.blade.php
end note

note top of OrganizerController
 organizer/createEvent.blade.php
 organizer/editEvent.blade.php
 organizer/panel.blade.php
 organizer/statuInfo.blade.php
end note

note top of EventController
 event/show.blade.php
end note

note top of TicketController
 ticket/index.blade.php
end note

note top of HomeController
 home.blade.php
end note

@enduml
